@@ -3,6 +3,10 @@
  * Don't send "deepen None" to server if graph walker
    supports shallow. (Jelmer Vernooĳ, #747)
 
+ * Support tweaking the compression level for
+   loose objects through the "core.looseCompression" and
+   "core.compression" settings. (Jelmer Vernooĳ)
+
 0.19.15	2020-01-26
 
  * Properly handle files that are just executable for the
